--- a/1-qr-code-component/index.html
+++ b/1-qr-code-component/index.html
@@ -22,9 +22,9 @@
     </div>
   </main>
   <footer class="bg-grey-blue text-center">
-    <p>Improve your front-end skills by building projects</p>
+    <!-- <p>Improve your front-end skills by building projects</p>
 
-    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> -->
     
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H" target="_blank">Frontend Mentor</a>. 
