added hover to button and rating card circle

--- a/2-interactive-rating-component/index.html
+++ b/2-interactive-rating-component/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <!-- Rating state start -->
-  <div class="container flex flex-center">
+  <main class="main flex flex-center">
     <div class="rating-card ">
       <div class="star-container flex flex-center">
         <img src="./images/icon-star.svg" alt="icon star" class="star">
@@ -35,7 +35,7 @@
          
       <button class="btn">Submit</button>
     </div>
-  </div>
+  </main>
 
 
   <!-- Rating state end -->
