--- a/2-interactive-rating-component/index.html
+++ b/2-interactive-rating-component/index.html
@@ -55,8 +55,8 @@
 
   <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Jovany Gomez</a>.
+      Challenge by <a href="https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://jovany.dev/">Jovany Gomez</a>.
     </div>
   </footer>
 
