--- a/4-order-summary-component/index.html
+++ b/4-order-summary-component/index.html
@@ -5,33 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
   
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <div class="card">
+    <img src="./images/illustration-hero.svg" alt="a person dancing behind a city background">
 
-  Order Summary
+    <div class="card">
+      <div class="card--container">
+        <h1 class="card--title">Order Summary</h1>
+        <p class="card--desc">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! </p>
+        <div class="card--subscription flex flex-space-between">
+          <div class="card--plan flex">
+            <img src="./images/icon-music.svg" alt="music icon">
+            <p>Annual Plan</p>
+            <p>$59.99/year</p>
+          </div>
+          <a href="#">Change</a>
+        </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        <button class="card--payment">Proceed to Payment</button>
+        <button class="card--cancel">Cancel Order</button>
+      </div>
+    </div>
   </div>
+    
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
 </body>
 </html>
