body image properties added for mobile and desktop

--- a/4-order-summary-component/index.html
+++ b/4-order-summary-component/index.html
@@ -36,8 +36,8 @@
     
   <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="jovany.dev" target="_blank">Jovany Gomez</a>.
     </div>
   </footer>
 </body>
