completed stats preview card component

--- a/5-stats-preview-card-component/index.html
+++ b/5-stats-preview-card-component/index.html
@@ -17,36 +17,34 @@
   <main>
     <div class="container height flex flex-center">
       <div class="hero">
-        <img src="./images/image-header-desktop.jpg" alt="group of women in a metting">
-        <h1 class="hero--title">Get <span>insights</span> that help your business grow.</h1>
-        <p class="hero--desc">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
-
-        <div class="hero--stats flex">
-          <div class="hero--stats-company">
-            <h2>10k+</h2>
-            <p class="uppercase">companies</p>
-          </div>
-          <div class="hero--stats-templates">
-            <h2>10k+</h2>
-            <p class="uppercase">templates</p>
-          </div>
-          <div class="hero--stats-queries">
-            <h2>10k+</h2>
-            <p class="uppercase">queries</p>
+        <div class="hero--img-container">
+          <img src="./images/image-header-desktop.jpg" alt="group of women in a metting" class="hero--img-main">
+          <div class="hero--img-bg-over"></div>
+        </div>
+        <div class="hero--content">
+          <h1 class="hero--title">Get <span class="text-violet">insights</span> that help your business grow.</h1>
+          <p class="hero--desc">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+          
+          <div class="hero--stats">
+            <div>
+              <h2>10k+</h2>
+              <p class="uppercase">companies</p>
+            </div>
+            <div>
+              <h2>314</h2>
+              <p class="uppercase">templates</p>
+            </div>
+            <div>
+              <h2>12m+</h2>
+              <p class="uppercase">queries</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-
   </main>
   
 
-  
-
-   companies
-  314 templates
-  12m+ queries
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
